Adds edit question endpoint
